--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '7.0'
           include-prerelease: true
 
+      - name: Install wasm-tools workload
+        run: dotnet workload install wasm-tools
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
