--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,4 @@
 {
-  "dependencies": {
-    "tailwindcss": "^3.3.2"
-  },
   "scripts": {
     "ui:dev": "npx tailwindcss -c tailwind.config.js -i ./tailwind.input.css -o ./wwwroot/css/app.css --watch",
     "ui:build": "npx tailwindcss -c tailwind.config.js -i ./tailwind.input.css -o ./wwwroot/css/app.css --minify",
@@ -9,5 +6,8 @@
     "migrate": "cd ../ProServ && dotnet run ProServ.csproj --AppTasks=migrate",
     "revert:last": "cd ../ProServ && dotnet run --AppTasks=migrate.revert:last",
     "revert:all": "cd ../ProServ && dotnet run --AppTasks=migrate.revert:all"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
