--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -52,7 +52,8 @@ jobs:
           name: .net-app
 
       - name: Test
-        run: dotnet ProServ.Tests --no-build --verbosity normal
+        run: dotnet test ProServ.Tests/ProServ.Tests.csproj --no-build --verbosity normal
+
 
   deploy:
     needs: test
