--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -11,38 +11,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '7.0'
-          include-prerelease: true
-
-      - name: Install wasm-tools workload
-        run: dotnet workload install wasm-tools
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release --no-restore
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload artifact for test and deploy jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+  
 
   test:
-    needs: build
     runs-on: windows-latest
 
     steps:
@@ -52,7 +23,10 @@ jobs:
           name: .net-app
 
       - name: Test
-        run: dotnet test ProServ.Tests/ProServ.Tests.csproj --no-build --verbosity normal
+        run: |
+          cd ProServ.Tests
+          dotnet test ProServ.Tests.csproj --no-build --verbosity normal
+
 
 
   deploy:
