--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -1,7 +1,3 @@
-# More information on GitHub Actions: https://github.com/features/actions
-# More information on Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build, test and deploy ASP.Net Core app to Azure Web App - ProServWebApp
 
 on:
@@ -42,6 +38,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   test:
+    needs: build
     runs-on: windows-latest
 
     steps:
