--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: .
 
   test:
     needs: build
@@ -48,9 +48,7 @@ jobs:
           name: .net-app
 
       - name: Test
-        run: |
-          cd ProServ.Tests
-          dotnet test ProServ.Tests.csproj --no-build --verbosity normal
+        run: dotnet test ProServ.Tests.csproj --no-build --verbosity normal
 
 
 
