--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -43,24 +43,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '7.0'
-          include-prerelease: true
-
-      - name: Install wasm-tools workload
-        run: dotnet workload install wasm-tools
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release --no-restore
-
+      
       - name: Test
-        run: dotnet test ProServ.Tests/ProServ.Tests.csproj --no-build --verbosity normal
+        run: dotnet test ProServ.Tests/ProServ.Tests.csproj
 
   deploy:
     needs: test
