--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -1,4 +1,4 @@
-name: Build, test and deploy ASP.Net Core app to Azure Web App - ProServWebApp
+name: Build and deploy ASP.Net Core app to Azure Web App - ProServWebApp
 
 on:
   push:
@@ -22,42 +22,27 @@ jobs:
       - name: Install wasm-tools workload
         run: dotnet workload install wasm-tools
 
-      - name: Restore dependencies
-        run: dotnet restore
-
       - name: Build with dotnet
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: Upload artifact for test and deploy jobs
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: .
-
-
-  test:
-    needs: build
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      
-      - name: Test
-        run: dotnet test ProServ.Tests/ProServ.Tests.csproj
-
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    needs: test
     runs-on: windows-latest
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from test job
+      - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
           name: .net-app
