--- a/.github/workflows/master_proservwebapp.yml
+++ b/.github/workflows/master_proservwebapp.yml
@@ -1,4 +1,8 @@
-name: Build and deploy ASP.Net Core app to Azure Web App - ProServWebApp
+# More information on GitHub Actions: https://github.com/features/actions
+# More information on Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build, test and deploy ASP.Net Core app to Azure Web App - ProServWebApp
 
 on:
   push:
@@ -22,27 +26,44 @@ jobs:
       - name: Install wasm-tools workload
         run: dotnet workload install wasm-tools
 
+      - name: Restore dependencies
+        run: dotnet restore
+
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --no-restore
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for test and deploy jobs
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
-    runs-on: windows-latest
+  test:
     needs: build
+    runs-on: windows-latest
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
+
+      - name: Test
+        run: dotnet test ProServ.Tests/ProServ.Tests.csproj --no-build --verbosity normal
+
+
+  deploy:
+    needs: test
+    runs-on: windows-latest
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact from test job
         uses: actions/download-artifact@v2
         with:
           name: .net-app
