--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ServerApi": {
-    "BaseUrl": "https://your-server-app.azurewebsites.net"
+    "BaseUrl": "https://proserv.azurewebsites.net"
   }
 }
