Updated HTTPS Config

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt": {
     "Key": "JaWfuF7iG2Pm1peohE/hWU1+A82jQD6udtcpFB1LUNM=",
-    "Issuer": "https://proservwebapp.azurewebsites.net/",
-    "Audience": "https://proservwebapp.azurewebsites.net/"
+    "Issuer": "https://proserv.azurewebsites.net/",
+    "Audience": "https://proserv.azurewebsites.net/"
   }
 }
