Update Workout Center

--- a/Client/ProServ.Client.csproj
+++ b/Client/ProServ.Client.csproj
@@ -32,8 +32,10 @@
 
   <ItemGroup>
     <None Remove="Controllers\" />
+    <None Remove="Pages\Workout Components\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Pages\Workout Components\" />
   </ItemGroup>
 </Project>
