--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -1,9 +1,8 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   }
 }
-
