--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
       }
     },
     {
-      "name": "Launch and Debug Standalone Blazor WebAssembly App",
+      "name": "Client App",
       "type": "blazorwasm",
       "request": "launch",
       "cwd": "${workspaceFolder}/Client", // Your client project path
@@ -35,7 +35,7 @@
       "name": "Full Application",
       "configurations": [
         ".NET Core Launch (Server)",
-        "Launch and Debug Standalone Blazor WebAssembly App"
+        "Client App"
       ]
     }
   ]
