--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "http": {
       "commandName": "Project",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5274",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
